# zk-language-comparison

./: .gitignore  README.md
arkworks/: Cargo.toml  README.md
arkworks/src/: lib.rs  main.rs
circom/: README.md  common.circom  init.circom  mastermind.circom  validateGuess.circom
circom/examples/: input1.json  input2.json
gnark/: README.md  go.mod  go.sum  mastermind.go  mastermind_test.go
halo2/: README.md
halo2/data/: init.in  validate.in
halo2/examples/: common.rs  init.rs  validate.rs
lurk/: README.md  mastermind.lurk
noir/: Nargo.toml  README.md
noir/src/: circuit.nr  main.nr
o1js/: README.md  package-lock.json  package.json
o1js/src/: common.ts  examples.ts  mastermind.ts
zir/: README.md  bits.zir  mastermind.zir  poseidon2.zir
zirgen/: README.md  bits.zir  mastermind.zir  one_hot.zir
